// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should optionally render an default button 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1 rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  background-color: #e0e0e0;
  border: 2px solid #e0e0e0;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #5a6268;
  border: 2px solid #5a6268;
}

<button
    class="c0"
    color="default"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button should optionally render an link button 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1 rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  background-color: #e0e0e0;
  border: 2px solid #e0e0e0;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #5a6268;
  border: 2px solid #5a6268;
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #757575;
  padding-left: 0;
  padding-right: 0;
}

<button
    class="c0 c1"
    color="default"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button should optionally render an link button with color primary 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1 rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  background-color: #ffc107;
  border: 2px solid #ffc107;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #c79100;
  border: 2px solid #c79100;
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #ffc107;
  padding-left: 0;
  padding-right: 0;
}

<button
    class="c0 c1"
    color="primary"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button should optionally render an outlined button 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1 rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  background-color: #e0e0e0;
  border: 2px solid #e0e0e0;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #5a6268;
  border: 2px solid #5a6268;
}

.c1 {
  background-color: transparent;
  color: #212121;
}

.c1:hover:enabled {
  background-color: transparent;
  color: #5a6268;
}

<button
    class="c0 c1"
    color="default"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button should optionally render an outlined button with color primary 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1 rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  background-color: #ffc107;
  border: 2px solid #ffc107;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #c79100;
  border: 2px solid #c79100;
}

.c1 {
  background-color: transparent;
  color: #ffc107;
}

.c1:hover:enabled {
  background-color: transparent;
  color: #c79100;
}

<button
    class="c0 c1"
    color="primary"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button should show danger color when color is provided 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1 rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  background-color: #ff3d00;
  border: 2px solid #ff3d00;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #b22a00;
  border: 2px solid #b22a00;
}

<button
    class="c0"
    color="danger"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button should show default color when color is provided 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1 rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  background-color: #e0e0e0;
  border: 2px solid #e0e0e0;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #5a6268;
  border: 2px solid #5a6268;
}

<button
    class="c0"
    color="default"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button should show primary color when color is provided 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1 rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 12px 36px;
  background-color: #ffc107;
  border: 2px solid #ffc107;
  color: #212121;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:hover:enabled {
  background-color: #c79100;
  border: 2px solid #c79100;
}

<button
    class="c0"
    color="primary"
    type="button"
  />
</DocumentFragment>
`;
